# loquaz

./: .gitignore  Cargo.toml  LICENSE  README.md  contacts.json  package-lock.json  package.json
loquaz-druid/: Cargo.toml  README.md
loquaz-druid/src/: delegate.rs
loquaz-druid/src/components/: nav.rs
loquaz-druid/src/core/: core.rs  subscription.rs  user.rs
loquaz-druid/src/data/: app_state.rs  router.rs
loquaz-druid/src/data/state/: config_state.rs  contact_state.rs  user_state.rs
loquaz-druid/src/pages/: mod.rs
loquaz-druid/src/pages/contacts/: mod.rs
loquaz-tauri/: README.md  package-lock.json  package.json  tailwind.config.js
loquaz-tauri/src/: App.tsx  main.tsx  store.ts
loquaz-tauri/src-tauri/: Cargo.toml  tauri.conf.json
loquaz-tauri/src-tauri/src/: broker.rs  cmd.rs  main.rs
loquaz-tauri/src-tauri/src/core/: config.rs  conversations.rs  core.rs  relay_pool.rs  user.rs
loquaz-tauri/src/components/: ChatList.tsx  ChatPage.tsx  ChatPane.tsx  ConfigPage.tsx  Nav.tsx
loquaz-tauri/src/features/chat/: ChatPage.tsx  ChatPane.tsx  chatSlice.ts
loquaz-tauri/src/features/config/: configSlice.ts
loquaz-tauri/src/services/: chat.ts
src/: App.tsx  broker.rs  data.rs  delegate.rs  index.css  main.rs  main.tsx  menus.rs  nostr_service.rs  relay.rs  theme.rs  view.rs  ws_service.rs
src-tauri/: .gitignore  tauri.conf.json
src-tauri/src/: broker.rs  cmd.rs
src-tauri/src/core/: config.rs  conversations.rs  core.rs  subscription.rs
src/common/: hooks.ts
src/common/components/: Button.tsx  Nav.tsx
src/components/: button.rs  header.rs  icons.rs  mod.rs  nav.rs
src/core/: config.rs  conversations.rs  core.rs  mod.rs  relay_pool.rs  user.rs
src/core/config/: provider.rs
src/core/entities/: config.rs  contact.rs  mod.rs  relay_pool.rs  subscription.rs
src/core/relay_pool/: provider.rs
src/data/: app_state.rs  config.rs  contact.rs  conversation.rs  mod.rs  user.rs
src/data/state/: config_state.rs  contact_state.rs  conversation_state.rs  mod.rs
src/features/chat/: ChatList.tsx  ChatPane.tsx
src/features/config/: ConfigPage.tsx
src/pages/: mod.rs
src/pages/chat/: controller.rs  view.rs
src/pages/config/: controller.rs  view.rs
src/pages/contacts/: controller.rs  view.rs
src/services/: chat.ts  config.ts
