[package]
name = "druid-ws"
version = "0.1.0"
authors = ["study"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.20.3", features = ["rand", "rand-std", "serde"] }
nostr = { git = "https://github.com/emeceve/nostr-rs" }
url = "2.0.0"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio-tungstenite = "0.15.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.0.0", features = ["full"] }
futures-channel = "0.3"
futures = "0.3"
