[package]
name = "nostr-chat"
version = "0.1.0"
authors = ["Emeceve <emeceve@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.20.3", features = ["rand", "rand-std", "serde"] }
nostr = { git = "https://github.com/emeceve/nostr-rs", commit = "7abc973" }
url = "2.0.0"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"], commit = "8d829c5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.0.0", features = ["full"] }
futures-channel = "0.3"
futures = "0.3"
home = "0.5.3"
thiserror = "1.0.29"
