[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nostr = { git = "https://github.com/futurepaul/nostr-rs", commit = "931a475" }
tauri = { version = "1.0.0-rc.3", features = ["api-all"] }
rusqlite = { version = "0.26", features = ["uuid", "bundled"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
secp256k1 = { version = "0.20.3", features = ["rand", "rand-std", "serde"] }
url = "2.0.0"
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.0.0", features = ["full"] }
futures = "0.3"
home = "0.5.3"
thiserror = "1.0.29"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.16"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
